# ak6mj-hf-propagation

./: .gitignore  INTEGRATION_PLAN.md  Makefile  PROJECT_STATUS.md  README.md  test_wspr_band.py  wspr_band.py  wspr_dashboard_spec.md
attic/: RECOVERY.md
docs/: ARTIFACT_STRATEGY.md  CLAUDE.md  DATA_PIPELINE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SHOEPH.md  DEPLOYMENT_SHOEPH_NOTES.md  DEPLOYMENT_TEST.md  HAMTOP1_SSH_SETUP.md  INFRASTRUCTURE.md  PHASE1_COMPLETE.md
lib/: __init__.py  band_utils.py  config.py  geo_utils.py  pskreporter.py  solar.py
prior-ft8-work/: ALL.TXT  CLAUDE.md  README.md  antenna.py  antenna_log.json  antenna_web.py  antennas.json  check_qrz_settings.py  ft8tool.py  pyproject.toml  rybtest.md  split_adi_by_gridsquare.py  wsjtx_control.py
prior-ft8-work/templates/: antennas.html  base.html  dashboard.html
scripts/: CRON_SETUP.md  backfill_kp.py  deploy.sh  restart.sh  solar_log.py  sync_from_hamtop1.sh  wspr-cron.sh
tests/: test_band_utils.py  test_config.py  test_deployment.py  test_geo_utils.py  test_solar.py  test_wspr_band.py
tools/: Makefile  WSJT-X  antenna.py  antenna_web.py  antenna_web_backup.py  antenna_web_fixed.py  ft8tool.py  hello_streamlit.py  hello_web.py  sync_to_www.py
tools/static/: app.js  style.css
tools/templates/: analysis.html  antennas.html  base.html  comparisons.html  dashboard.html  experiment.html  wspr.html  wspr_compare.html
